# RLPost

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: qwen3-0.6b-alphabet-sort.toml  qwen3-0.6b-gsm8k.toml  qwen3-0.6b-scribe.toml
docs/: frontend-direction.md  serving.md  training-colab.md  writeup.md
environments/pattern_gym/: README.md  pyproject.toml
environments/pattern_gym/pattern_gym/: __init__.py  rules.py
environments/scribe_stream/: pyproject.toml
environments/scribe_stream/scribe_stream/: __init__.py  player.py  streams.py
nanolab/: __init__.py  api.py  artifacts.py  cli.py  cloud.py  config.py  db.py  envs.py  evaluate.py  instrument.py  ledger.py  policy_server.py  report.py  serve.py  serve_local.py  train.py
nanolab/ui/: app.css  app.js  index.html
notebooks/: train_gsm8k_colab.ipynb
outputs/evals/alphabet-sort--gemini-2.5-flash-lite/28fd9a9a/: metadata.json  results.jsonl
outputs/evals/alphabet-sort--gemini-2.5-flash/1bfbdc93/: metadata.json  results.jsonl
outputs/evals/alphabet-sort--gemini-2.5-flash/63d77e6f/: metadata.json  results.jsonl
scripts/: compare_adapter.py
tests/: test_api.py  test_cloud.py  test_instrument.py  test_multiturn_bridge.py  test_pattern_gym.py  test_scribe_stream.py  test_smoke.py
