[project]
name = "nanolab"
version = "0.1.0.dev0"
description = "A self-hosted RL lab: environments → eval → GRPO+LoRA training → serving → re-eval. One CLI, one SQLite file."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "verifiers>=0.2.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.scripts]
nanolab = "nanolab.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanolab"]
