[project]
name = "scribe-stream"
version = "0.1.0"
description = "Stream environment for training a note-taking Scribe: reward is Lift — how much the notebook improves a frozen Player on later, dependent tasks."
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scribe_stream"]
